--- a/Multiplayer Game Sample.csproj
+++ b/Multiplayer Game Sample.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Messages.cs" />
     <Compile Include="Game.cs">
       <SubType>Form</SubType>
     </Compile>
